; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_clock_get_boottime_nanotime.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_clock.c_clock_get_boottime_nanotime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@clock_boottime = common dso_local global i64 0, align 8
@clock_boottime_usec = common dso_local global i64 0, align 8
@NSEC_PER_USEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @clock_get_boottime_nanotime(i64* %0, i32* %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i64* %0, i64** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = call i32 (...) @splclock()
  store i32 %6, i32* %5, align 4
  %7 = call i32 (...) @clock_lock()
  %8 = load i64, i64* @clock_boottime, align 8
  %9 = load i64*, i64** %3, align 8
  store i64 %8, i64* %9, align 8
  %10 = load i64, i64* @clock_boottime_usec, align 8
  %11 = trunc i64 %10 to i32
  %12 = load i32, i32* @NSEC_PER_USEC, align 4
  %13 = mul nsw i32 %11, %12
  %14 = load i32*, i32** %4, align 8
  store i32 %13, i32* %14, align 4
  %15 = call i32 (...) @clock_unlock()
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @splx(i32 %16)
  ret void
}

declare dso_local i32 @splclock(...) #1

declare dso_local i32 @clock_lock(...) #1

declare dso_local i32 @clock_unlock(...) #1

declare dso_local i32 @splx(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
